# alphafold3_input

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: actions.yml  docs.yml  format.yml  lint.yml  pages.yml  test.yml  type.yml
docs/: conf.py  index.rst
src/alphafold3_input/: __about__.py  __init__.py  __meta__.py  bond.py  dna.py  job.py  ligand.py  modification.py  protein.py  rna.py  template.py  utils.py
tests/: test_about.py  test_bond.py  test_dna.py  test_init.py  test_job.py  test_ligand.py  test_modification.py  test_protein.py  test_rna.py  test_template.py  test_utils.py
